syntax = "proto3";
package pb.authorization;

option go_package = "pb/authorization";

message GetUserInfoRequest {
    string user_id = 1;
}

message HasAccessRequest {
    string user_id = 1;
    repeated string permissions = 2;
}

message AuthResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message RefreshTokenRequest {
    string session_user_id = 1;
    string token_id = 2;
  }