syntax = "proto3";
package pb.authorization;

option go_package = "pb/authorization";

message User {
    string id = 1;
    string full_name = 2;
    string email = 3;
    string created_at = 4;
    string updated_at = 5;
}

message RegisterRequest {
    string full_name = 1;
    string email = 2;
    string password = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LogoutRequest {
    string session_user_id = 1;
    string token_id = 2;
  }